--- a/sprinkler/templates/sprinkler/test_commands.html
+++ b/sprinkler/templates/sprinkler/test_commands.html
@@ -6,23 +6,24 @@
     {% bootstrap_javascript %}
     {% bootstrap_messages %}
 
-    <link rel="stylesheet" type="text/css" href="{% static 'corwin/style.css' %}">
+<!--    <link rel="stylesheet" type="text/css" href="{% static 'corwin/style.css' %}">-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="{% static 'corwin/ui.js' %}"></script>
+    <script src="{% static 'sprinkler/test_requests.js' %}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/svg+xml" href="{% static 'corwin/icons/Baby Angel SVG Cricut Silhouette.png' %}"/>
-    <link rel="alternate icon" type="image/png" href="{% static 'corwin/icons/Baby Angel SVG Cricut Silhouette.svg' %}"/>
 </head>
 <body>
 
 <div>IOT devices</div>
 <table>
-    <th>Name</th><th>Device Id</th>
+    <th>Name</th><th>Device Id</th><th>Get Status Now</th><th>Sprinkle for 1 minute now</th>
     {% for device in all_devices %}
         <tr>
             <td>{{device.name}}</td>
             <td>{{device.device_id}}</td>
+            <td><button data-request_type="status" data-device_id="{{device.device_id}}">Get Status</button></td>
+            <td><button data-request_type="sprinkle-1-min" data-device_id="{{device.device_id}}">Start Sprinkle</button></td>
         </tr>
+
     {% endfor %}
 </table>
 </body>
