--- a/sprinkler/templates/sprinkler/device_status.html
+++ b/sprinkler/templates/sprinkler/device_status.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'sprinkler/style.css' %}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="{% static 'sprinkler/test_requests.js' %}"></script>
+    <script src="{% static 'sprinkler/device_status.js' %}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -18,6 +18,7 @@
     <table>
         <th>Name</th>
         <th>Device Id</th>
+        <th>Last status</th>
         <th>Get Status Now</th>
         <th>Turn on sprinkler</th>
         <th>Turn off sprinkler</th>
@@ -26,12 +27,12 @@
             <tr>
                 <td>{{device.name}}</td>
                 <td>{{device.device_id}}</td>
+                <td>{{device.get_latest_status.created}}</td>
                 <td><button data-request_type="status" data-device_id="{{device.device_id}}">Get Status</button></td>
                 <td><button data-request_type="sprinkle-on" data-device_id="{{device.device_id}}">Start Sprinkle</button></td>
                 <td><button data-request_type="sprinkle-off" data-device_id="{{device.device_id}}">Stop Sprinkle</button></td>
                 <td><button data-request_type="sprinkle-1-min" data-device_id="{{device.device_id}}">Sprinkle 1 minute</button></td>
             </tr>
-    
         {% endfor %}
     </table>
 </div>
