--- a/sprinkler/static/sprinkler/style.css
+++ b/sprinkler/static/sprinkler/style.css
@@ -1,7 +1,19 @@
+.outer-container {
+    display:flex;
+    justify-content:center;
+}
+
+.inner-container {
+    max-width: 1000px;
+}
+
 .iot-device-container {
+    padding:5px;
+}
+
+.iot-device-container table{
     border: 1px solid lightgrey;
     border-radius: 5px;
-    padding:5px;
 }
 .iot-device-container th{
     padding-left: 10px;
@@ -15,7 +27,7 @@
     padding-bottom: 10px;
 }
 
-.devic-status-heading {
+.device-status-heading {
     text-align: center;
     font-size: 1.2em;
     font-weight: bold;
