added support for sprinkle cycles

--- a/sprinkler/templates/sprinkler/device_status.html
+++ b/sprinkler/templates/sprinkler/device_status.html
@@ -37,6 +37,7 @@
                             <button data-request_type="sprinkle-off" data-device_id="{{device.device_id}}">Stop Sprinkle</button>
                             {% comment %} TODO: rework this to sprinkle for X minutes {% endcomment %}
                             <button data-request_type="sprinkle-1-min" data-device_id="{{device.device_id}}">Sprinkle 1 minute</button>
+                            <button data-request_type="sprinkle-cycle" data-device_id="{{device.device_id}}">Sprinkle 3 cycles</button>
                             <button data-request_type="sleep-1-min" data-device_id="{{device.device_id}}">Sleep for 1 min</button>
                             <button data-request_type="switch-broker-debug" data-device_id="{{device.device_id}}">Switch to debug broker</button>
                             <button data-request_type="switch-broker-prod" data-device_id="{{device.device_id}}">Switch to prod broker</button>
